Remove grid rule and rm arg from makefile

--- a/C/Makefile
+++ b/C/Makefile
@@ -11,8 +11,5 @@ gen_obj_example: gen_obj
 	./gen_obj shape.obj red_shadow.mcfunction 0.75 0.25 0.25 0.5 0 0 0 0 1 0.25
 	./gen_obj shape.obj cyan_shadow.mcfunction 0.0 0.8 1.0 0.5 0 0 0 0 1 0.25
 
-gen_grid: $(SRC)/gen_grid.c
-	gcc -o $@ -O2 $(SRC)/gen_grid.c
-
 clean:
-	rm gen_obj_color gen_obj gen_grid
+	rm gen_obj_color gen_obj
