Make both programs able to use carets instead of tildes

--- a/C/Makefile
+++ b/C/Makefile
@@ -10,8 +10,8 @@ gen_obj: $(SRC)/gen_obj.c
 	gcc -o $@ -O2 $(SRC)/gen_obj.c
 
 gen_obj_example: gen_obj
-	./gen_obj shape.obj red_shadow.mcfunction "minecraft:dust 0.75 0.25 0.25 0.5" 0 0 0 0 1 0.25
-	./gen_obj shape.obj cyan_shadow.mcfunction "minecraft:dust 0.0 0.8 1.0 0.5" 0 0 0 0 1 0.25
+	./gen_obj shape.obj red_shadow.mcfunction "minecraft:dust 0.75 0.25 0.25 0.5" '~' 0 0 0 0 1 0.25
+	./gen_obj shape.obj cyan_shadow.mcfunction "minecraft:dust 0.0 0.8 1.0 0.5" '~' 0 0 0 0 1 0.25
 
 clean:
 	rm gen_obj_color gen_obj
